<resources>
    <string name="app_name">Jiwa Ibu</string>
    <string name="action_settings">Settings</string>

    <!-- Language -->
    <string name="choose_language_title">Select your language</string>
    <string name="choose_language_desc">Choose between English and Malay.\nYou can change this later.</string>
    <string name="choose_language_en">English</string>
    <string name="choose_language_malay">Malay</string>

    <!-- Onboarding -->
    <string name="onboarding_healthcare_title">Healthcare for women</string>
    <string name="onboarding_healthcare_desc">You can interact with thousands of other mothers on Jiwa Ibu. Create a topic and share experiences with other mothers!</string>
    <string name="onboarding_guidance_title">Guidance as soon as\nyou need it</string>
    <string name="onboarding_guidance_desc">With our support chat, you can get immediate and automated advice on the app. If you don’t have wifi, you can sign up for SMS notifcations!</string>
    <string name="onboarding_lifeline_title">Your lifeline when an\nemergency hits</string>
    <string name="onboarding_lifeline_desc">If you find yourself in a situation where you need help immediately, you can come to Hanai for an updated list of resources closest to you.</string>
    <string name="btn_next_step">Next Step</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_skip">Skip</string>

    <!-- Mobile Number Verification -->
    <string name="phone_auth_toolbar_title">Phone Authentication</string>
    <string name="phone_auth_main_title">Enter your mobile number</string>
    <string name="phone_auth_main_desc">Hanai will send you SMS text messages and standard rates may apply. You can always opt out.</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="mobile_number_verification_code_hint">Enter Code</string>
    <string name="btn_send_me_a_code">Send Me A Code</string>
    <string name="phone_auth_sms_request_title">Can we text you?</string>
    <string name="phone_auth_sms_request_desc">Opt to receive SMS text messages for regular updates on your pregnancy or overall health</string>
    <string name="phone_auth_sms_request_yes">Yes, I want SMS Texts</string>
    <string name="phone_auth_sms_request_no">I don\'t want text updates</string>

    <!-- Profile - Basic Information -->
    <string name="profile_info_toolbar_title">Profile Information</string>
    <string name="profile_info_main_title">What\'s your name?</string>
    <string name="profile_info_main_desc">What name would you like to go by here? Enter your first name and last name to proceed</string>
    <string name="profile_first_name_hint">First Name</string>
    <string name="profile_last_name_hint">Last Name</string>

    <!-- Profile - Date of Birth -->
    <string name="birth_date_toolbar_title">Date of Birth</string>
    <string name="birth_date_main_title">When\'s your birthday?</string>
    <string name="birth_date_main_desc">Let us know when you were born and we can determine best tips based on your age!</string>

    <!-- Profile - Mom's Profile -->
    <string name="mom_profile_toolbar_title">Mom\'s Profile</string>
    <string name="mom_profile_main_title">Are you expecting?</string>
    <string name="mom_profile_main_desc">If you want to track your pregnancy, let us know when your baby is due!</string>
    <string name="mom_profile_no_expecting">I\'m Not Expecting</string>
    <string name="mom_profile_get_started">Get Started</string>
    <string name="mom_profile_due_date_unknown"><u>I don\'t know my due date</u></string>

    <!-- Bottom Nav Menu -->
    <string name="bottom_nav_menu_title_home">Home</string>
    <string name="bottom_nav_menu_title_resources">Resources</string>

    <!-- Home -->
    <string name="home_btn_see_tips" translatable="false">See Health Experts\' Tips</string>
    <string name="home_menu_vaccination" translatable="false">Vaccination</string>
    <string name="home_menu_maternal_health" translatable="false">Maternal Health</string>
    <string name="home_menu_mental_health" translatable="false">Mental Health</string>

</resources>