<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:elevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/mom_profile_toolbar_title"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarText"
            app:titleTextColor="@color/color_on_primary" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/mom_profile_main_title"
            android:textAppearance="@style/HeadlineText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/mom_profile_main_desc"
            android:textAppearance="@style/SubtitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/button_enabled"
            android:elevation="2dp"
            android:paddingTop="@dimen/padding_16"
            android:paddingBottom="@dimen/padding_16"
            android:text="@string/mom_profile_get_started"
            android:textAllCaps="false"
            android:textAppearance="@style/ButtonText"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/datePicker" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_not_expecting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/button_disabled"
            android:elevation="2dp"
            android:paddingTop="@dimen/padding_16"
            android:paddingBottom="@dimen/padding_16"
            android:text="@string/mom_profile_no_expecting"
            android:textAllCaps="false"
            android:textAppearance="@style/ButtonText"
            android:textColor="@color/button_enabled"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/btn_get_started" />

        <TextView
            android:id="@+id/noDueDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/mom_profile_due_date_unknown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_not_expecting" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>