<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:elevation="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/profile_info_toolbar_title"
            app:titleCentered="true"
            app:titleTextAppearance="@style/ToolbarText"
            app:titleTextColor="@color/color_on_primary" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="start"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/profile_info_main_title"
            android:textAppearance="@style/HeadlineText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingMultiplier="1.2"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:text="@string/profile_info_main_desc"
            android:textAppearance="@style/SubtitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="@dimen/padding_16"
            android:layout_marginEnd="36dp"
            android:hint="@string/profile_first_name_hint"
            app:boxStrokeColor="@color/button_disabled"
            app:hintTextAppearance="@style/SubtitleText"
            app:hintTextColor="@color/subtitle_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="36dp"
            android:hint="@string/profile_last_name_hint"
            app:boxStrokeColor="@color/button_disabled"
            app:hintTextAppearance="@style/SubtitleText"
            app:hintTextColor="@color/subtitle_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstNameTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNextStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:backgroundTint="@color/button_disabled"
            android:elevation="2dp"
            android:paddingTop="@dimen/padding_16"
            android:paddingBottom="@dimen/padding_16"
            android:text="@string/btn_next_step"
            android:textAllCaps="false"
            android:textAppearance="@style/ButtonText"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/lastNameTextField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>